--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -5,7 +5,30 @@
     <title>Sushi Recipe</title>
 </head>
 <body>
-    <h1>The Recipe for Sushi</h1>
-    <img src = "../images/sushi.jpeg"
+    <h1>Salmon Roll Sushi</h1>
+    <img src = "../images/sushi.jpeg">
+    
+    <h2>What is Sushi and is it ieasy to make?</h2>
+    <p>Homemade salmon roll made with sushi rice, nori, and smoked salmon. This is a very basic and easy recipe for making sushi. It might take a while to learn how to make a perfect roll, but you'll have fun trying! Add wasabi (Japanese horseradish) for a good kick!</p>
+    <p>Sushi is a Japanese dish consisting of fish or seafood wrapped in rice and seaweed, generally served with soy sauce and wasabi</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Japanese sushi rice - 2 cups</li>
+        <li>Rice wine vinegar - 6 tablespoons</li>
+        <li>Nori (Dry Seaweed) - 6 sheets</li>
+        <li>Wasabi paste - 2 tablespoons</li>
+        <li>Smoked salmon - 8 ounces</li>
+        <li>Cucumber (Diced)  - 1pc</li>
+        <li>Peeled and diced avocado - 1pc</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Soak rice for 4 hours. Drain rice and cook in a rice cooker with 2 cups of water. Rice must be slightly dry as vinegar will be added later.</li>
+        <li>Immediately after rice is cooked, mix in rice wine vinegar; spread rice on a plate until completely cool.</li>
+        <li>Place 1 sheet of seaweed on a bamboo mat; press a thin layer of cool rice on seaweed, leaving at least a 1/2 inch top and bottom edge of the seaweed uncovered. This is for easier sealing later. Dot some wasabi on rice; arrange smoked salmon, cucumber, and avocado on rice about 1 inch away from the bottom edge of seaweed.</li>
+        <li>Slightly wet the top edge of seaweed; roll up tightly from the bottom to the top edge with the help of the bamboo mat. Cut salmon roll into 8 equal pieces and serve. Repeat for other rolls.</li>
+    </ol>
 </body>
 </html>
