Fixed typo on line 11 of sushi.html

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -8,7 +8,7 @@
     <h1>Salmon Roll Sushi</h1>
     <img src = "../images/sushi.jpeg">
     
-    <h2>What is Sushi and is it ieasy to make?</h2>
+    <h2>What is Sushi and is it easy to make?</h2>
     <p>Homemade salmon roll made with sushi rice, nori, and smoked salmon. This is a very basic and easy recipe for making sushi. It might take a while to learn how to make a perfect roll, but you'll have fun trying! Add wasabi (Japanese horseradish) for a good kick!</p>
     <p>Sushi is a Japanese dish consisting of fish or seafood wrapped in rice and seaweed, generally served with soy sauce and wasabi</p>
 
