--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/sushi.html">A recipe for sushi</a>"
+        <ul>
+            <li><a href="./recipes/sushi.html">A recipe for sushi</a></li>
+            <li><a href="./recipes/nutellaCake.html">Nutella Mug Cake</a></li>
+        </ul>
     </body>
 </html>
