--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -9,8 +9,8 @@
     <img src = "../images/sushi.jpeg">
     
     <h2>What is Sushi and is it easy to make?</h2>
-    <p>Homemade salmon roll made with sushi rice, nori, and smoked salmon. This is a very basic and easy recipe for making sushi. It might take a while to learn how to make a perfect roll, but you'll have fun trying! Add wasabi (Japanese horseradish) for a good kick!</p>
-    <p>Sushi is a Japanese dish consisting of fish or seafood wrapped in rice and seaweed, generally served with soy sauce and wasabi</p>
+    <p>Homemade salmon roll made with sushi rice, nori, and smoked salmon. This is a very basic and easy recipe for making sushi. It might take a while to learn how to make a perfect roll, but you'll have fun trying! Add wasabi (Japanese horseradish) <strong>(optional)</strong> for a good kick!</p>
+    <p>Sushi is a Japanese dish consisting of <em>fish or seafood</em> wrapped in <em>rice and seaweed</em>, generally served with <em>soy sauce and wasabi</em></p>
 
     <h3>Ingredients</h3>
     <ul>
