Added link to banana_cookies.html in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/sushi.html">A recipe for sushi</a></li>
             <li><a href="./recipes/nutellaCake.html">Nutella Mug Cake</a></li>
+            <li><a href="recipes/banana_cookies.html"></a></li>
         </ul>
     </body>
 </html>
