--- a/recipes/banana_cookies.html
+++ b/recipes/banana_cookies.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Super Easy Banana Bread Cookies</h1>
-    <br>
+    <img src="../recipes/banana_bread.jpg">
     <h2>Ingredients</h2>
     <ul>
         <li>2 small overripe mashed bananas</li>
